--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: pmarsceill/just-the-docs
 description: "CS-1400 Implementation Guide for mentors and instructors."
-url: "https://org-for-testing-autograding.github.io" 
+url: "https://cs-1400.github.io/CS-1400" 
 permalink: /:title/
 
 
